--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,10 @@ name: Python CI
 
 on:
   - push
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -15,6 +14,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
         # make depends on poetry
       - name: Install dependencies
-        run: pip install poetry
-   
-
+        run: |
+          pip install poetry
+          poetry install
+      - name: pytest
+        run: poetry run pytest
