--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
           pip install poetry
           poetry install
       - name: pylint
-        run: poetry run pytest
-
-
-
+        run: |
+          poetry run pytest
+          echo "noob"
